# cogames-agents

./: MANIFEST.in  README.co-gas.md  README.md  pyproject.toml  setup.py
docs/: 0018-tribal-village-temple-roles.md  aligned_junction_held_investigation.md  app-backend-eval-pipeline.md  beta-cvc-policy-validation.md  cogames-eval-internals.md  cogas-agent-design.md  cogsguard-mechanics-deep-dive.md  creating-scripted-agents.md  eval-results-log.md  evolution-system-architecture.md  leaderboard-submission-process.md  machina1-agent-analysis.md  metta-cogames-overview.md  nim-vs-python-agents-comparison.md  role-distribution-analysis.md  scripted-agent-registry.md  training-and-submission-guide.md  wandb-analysis-cogsguard-training.md
scripts/: README.md  benchmark_agents.sh  ci_eval.sh  compare_agents.py  enrich_eval_output.py  eval_cogas.sh  quick_eval.sh  regression_check.py  run_cogsguard_instrumented_audit.py  run_cogsguard_parity.py  run_cogsguard_rollout.py  tune_cogas.sh
src/cogames_agents/evals/: planky_evals.py
src/cogames_agents/policy/: cogsguard_teacher.py  scripted_registry.py
src/cogames_agents/policy/evolution/cogsguard/: evolutionary_coordinator.py
src/cogames_agents/policy/nim_agents/: __init__.py  agents.py  cogsguard_agents.nim  cogsguard_align_all_agents.nim  common.nim  ladybug_agent.nim  nim_agents.nim  racecar_agents.nim  thinky_agents.nim  thinky_eval.py
src/cogames_agents/policy/scripted_agent/: README.md  baseline_agent.py  demo_policy.py  types.py  unclipping_agent.py  utils.py
src/cogames_agents/policy/scripted_agent/buggy/: context.py  entity_map.py  goal.py  obs_parser.py  policy.py  trace.py
src/cogames_agents/policy/scripted_agent/buggy/goals/: aligner.py  gear.py  miner.py  scout.py  scrambler.py  shared.py  stem.py  survive.py
src/cogames_agents/policy/scripted_agent/cogas/: __init__.py  cogas_policy.py  context.py  debug_logger.py  entity_map.py  goal.py  goals.py  junction_control.py  navigator.py  obs_parser.py  policy.py  resource_manager.py  team_coordinator.py  trace.py
src/cogames_agents/policy/scripted_agent/cogas/goals/: aligner.py  gear.py  miner.py  scout.py  scrambler.py  shared.py  stem.py  (+1 more)
src/cogames_agents/policy/scripted_agent/cogsguard/: CLAUDE.md  README.md  __init__.py  aligned_junction_held_investigation.md  aligner.py  behavior_hooks.py  control_agent.py  debug_agent.py  miner.py  policy.py  prereq_trace.py  rollout_trace.py  scout.py  scrambler.py  targeted_agent.py  teacher.py  types.py  v2_agent.py
src/cogames_agents/policy/scripted_agent/common/: geometry.py  roles.py  tag_utils.py
src/cogames_agents/policy/scripted_agent/pinky/: DESIGN.md  __init__.py  policy.py  state.py  types.py
src/cogames_agents/policy/scripted_agent/planky/: CLAUDE.md  IMPROVEMENTS.md  NOTES.md  PLAN.md  README.md  STRATEGY.md  __init__.py  context.py  entity_map.py  goal.py  navigator.py  obs_parser.py  policy.py  trace.py
tests/: conftest.py  test_agent_benchmarks.py  test_cogas.py  test_cogas_integration.py  test_cogsguard_action_timing.py  test_cogsguard_miner_danger_radius.py  test_cogsguard_roles.py  test_eval_metrics.py  test_evolution.py  test_evolution_integration.py  test_evolutionary_coordinator.py  test_pinky_behaviors.py  test_pinky_navigation.py  test_planky_behaviors.py  test_prereq_trace.py  test_role_distributions.py  test_scripted_agent_tags.py  test_scripted_agent_type_tags.py  test_scripted_policies.py  test_scripted_registry.py
tests/pinky_evals/: pinky_aligner_test.map  pinky_all_gear_stations.map  pinky_exploration_memory.map  pinky_gear_miner.map  pinky_gear_scout.map  pinky_maze_navigation.map  pinky_miner_bump_extractor.map  pinky_miner_extract.map  pinky_miner_full_cycle.map  pinky_multi_extractors.map  pinky_navigation_obstacles.map  pinky_retreat_test.map  pinky_scout_explore.map  pinky_scrambler_test.map
tutorials/: cogsguard_make_policy.ipynb  cogsguard_make_policy.md  cogsguard_make_policy.py
(+26 files in other folders)
