[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cogames-agents"
version = "0.0.1"
description = "Optional agent policies for CoGames"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cogames_agents", "cogames_agents.*"]

[tool.setuptools.package-data]
"cogames_agents" = ["py.typed"]
