[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1", "setuptools_scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogames-agents"
description = "Optional agent policies for CoGames"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "Metta AI" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
urls = { Homepage = "https://github.com/Metta-AI/metta/tree/main/packages/cogames-agents", Repository = "https://github.com/Metta-AI/metta" }
dependencies = ["cogames==0.3.66", "mettagrid==0.2.0.77", "numpy>=2.0.0"]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cogames_agents", "cogames_agents.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cogames_agents" = [
  "py.typed",
  # Nim source files for building
  "policy/nim_agents/*.nim",
  "policy/nim_agents/*.nims",
  "policy/nim_agents/nimby.lock",
  # Compiled Nim binaries
  "policy/nim_agents/bindings/generated/*.so",
  "policy/nim_agents/bindings/generated/*.dylib",
  "policy/nim_agents/bindings/generated/*.dll",
  "policy/nim_agents/bindings/generated/*.py",
]

[tool.setuptools_scm]
tag_regex = "^cogames-agents-v(?P<version>\\d+\\.\\d+\\.\\d+(?:\\.\\d+)?)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../.."
fallback_version = "0.0.0"
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--match",
  "cogames-agents-v*",
]

[tool.uv]
cache-keys = [
  { file = "src/cogames_agents/policy/nim_agents/nim_agents.nim" },
  { file = "src/cogames_agents/policy/nim_agents/nim_agents.nims" },
  { file = "src/cogames_agents/policy/nim_agents/common.nim" },
  { file = "src/cogames_agents/policy/nim_agents/random_agents.nim" },
  { file = "src/cogames_agents/policy/nim_agents/thinky_agents.nim" },
  { file = "src/cogames_agents/policy/nim_agents/racecar_agents.nim" },
  { file = "src/cogames_agents/policy/nim_agents/cogsguard_agents.nim" },
]

[tool.uv.sources]
cogames = { workspace = true }
mettagrid = { workspace = true }
